<resources>
    <string name="app_name">Library</string>
    <string name="Slogan">Начните читать вместе с Library</string>
    <string name="reg">Зарегестрироваться</string>
    <string name="have_no_accaunt">Нет аккаунта?</string>
    <string name="starttext">Начать</string>
    <string name="HaveNoAccaunt">Нет аккаунта?</string>
    <string name="this_is_logo_text">This is logo</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_password">Пароль</string>
    <string name="believe_me">Запомнить меня</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_fami">Введите фамилию</string>
    <string name="choose_Category">Выберите категорию</string>
    <string name="Category_Fantasy">Фантакстика</string>
    <string name="Category_Detektiw">Детективы</string>
    <string name="Category_Romany">Романы</string>
    <string name="Category_Poesiya">Поэзия</string>
    <string name="Category_Ujasy">Ужасы</string>
    <string name="Category_LoveRoman">Любовные романы</string>
    <string name="Category_Proza">Проза</string>
    <string name="Category_Trillery">Триллеры</string>
    <string name="Category_Komiksy">Комиксы</string>
    <string name="Category_Drama">Драма</string>
    <string name="Category_Psy">Психология</string>
    <string name="Category_Priklucheniye">Приключения</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="price_format">%1$s сом</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_email">Введите email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailed_price">Price</string>
    <string name="detailed_som">сом</string>
    <string name="detailed_20">20</string>
    <string name="detailed_add_to_cart">Добавить в корзину</string>
    <string name="detailed_buy_now">Купить сейчас</string>
    <string name="detailed_author_name">Author name</string>
    <string name="detailed_product_name">Product name</string>
    <string name="detailed_product_description">Product description</string>
    <string name="detailed_img_from_detailed">img_from_detailed</string>
    <string name="detailed_1">1</string>

</resources>