<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.library.UI.Activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_settingActivity"
            app:destination="@id/settingActivity" />
    </fragment>
    <action
        android:id="@+id/action_global_nav_home"
        app:destination="@id/nav_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.library.UI.Activities.ui.home.addCardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/addcardfragment" />

    <activity
        android:id="@+id/settingActivity"
        android:name="com.example.library.UI.Activities.SettingsActivity"
        android:label="@string/action_settings"
        tools:layout="@layout/activity_settings" />
    <action android:id="@+id/action_global_nav_home2" app:destination="@id/nav_home" />
</navigation>