<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckgrnd"
    tools:context=".UI.regActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="150sp"
        android:src="@drawable/logo"

        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="25sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="25sp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_name"
        android:paddingStart="20sp"


        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/fam"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/name"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="25sp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_fami"
        android:paddingStart="20sp"

        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/fam"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="25sp"
        android:background="@drawable/input_design"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:paddingStart="20sp"

        android:text="+996"

        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@id/number"
        android:layout_centerInParent="true"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="25sp"
        android:autofillHints="password"
        android:background="@drawable/input_design"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textColor="@color/forText"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password"
        android:layout_marginStart="25sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="25sp"
        android:backgroundTint="@color/forBtn"
        android:text="@string/reg"
        android:textSize="20sp" />


</RelativeLayout>