<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5sp"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="190sp"
        android:layout_marginTop="5sp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:background="#EDEDED"
            android:orientation="horizontal"
            android:paddingStart="5sp"
            android:paddingTop="5sp">

            <ImageView
                android:id="@+id/cartImageDetail"
                android:layout_width="150sp"
                android:layout_height="140sp"
                android:layout_marginEnd="5sp"
                android:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cartAuthorDetail"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="5sp"
                    android:paddingStart="5sp"
                    android:text="@string/detailed_author_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cartNameDetail"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="5sp"
                    android:paddingStart="5sp"
                    android:text="@string/detailed_product_name"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cartPriceDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="25sp"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="5sp"
                        android:paddingStart="5sp"
                        android:text="@string/detailed_price"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="5sp"
                        android:paddingStart="5sp"
                        android:text="сом"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25sp"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="5sp"
                        android:paddingStart="5sp"
                        android:text="Количество:"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="25sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="5sp"
                        android:text="Количество"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>